syntax = "proto3";

package bridge;

// The greeting service definition.
service Bridge {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  // Get the current version of the control panel
  rpc GetVersion (GetVersionRequest) returns (GetVersionReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message GetVersionRequest {}

message GetVersionReply {
  string version = 1;
}
